--- a/.classpath
+++ b/.classpath
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/byte-buddy-1.10.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/classmate-1.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/dom4j-2.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/FastInfoset-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/hibernate-commons-annotations-5.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/hibernate-core-5.4.11.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/istack-commons-runtime-3.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/jandex-2.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/javassist-3.24.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/javax.activation-api-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/javax.persistence-api-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/jaxb-api-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/jaxb-runtime-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/jboss-logging-3.3.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/mysql-connector-java-8.0.19.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/stax-ex-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/diego/eclipse-workspace/lib/txw2-2.3.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-22">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/byte-buddy-1.10.7.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/classmate-1.5.1.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/dom4j-2.1.1.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/FastInfoset-1.2.15.jar"/>
+	
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/javax.activation-api-1.2.0.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/javax.persistence-api-2.2.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/jaxb-api-2.3.1.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/jaxb-runtime-2.3.1.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/jboss-logging-3.3.2.Final.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/mysql-connector-java-8.0.19.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/stax-ex-1.8.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/txw2-2.3.1.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/hibernate-commons-annotations-5.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/hibernate-core-5.4.11.Final.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/istack-commons-runtime-3.0.7.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/jandex-2.1.1.Final.jar"/>
+	<classpathentry kind="lib" path="c:/Users/Agustin/Desktop/tpOO2_grupo3/lib/javassist-3.24.0-GA.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
